force-app/main/default/objects/Market_Event__c/Market_Event__c.object-meta.xml
<CustomObject>
    <label>Market_Event</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Market_Event_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market_Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>