force-app/main/default/objects/Market_Event__c/fields/Agent_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Recommendation__c</fullName>
    <label>Agent_Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>