force-app/main/default/objects/Market_Event__c/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <label>Event_Date_Time</label>
    <type>DateTime</type>
</CustomField>