force-app/main/default/objects/Market_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>MF Downgrade</fullName>
                <isActive>false</isActive>
                <label>MF Downgrade</label>
            </value>
            <value>
                <fullName>NIFTY Drop</fullName>
                <isActive>false</isActive>
                <label>NIFTY Drop</label>
            </value>
            <value>
                <fullName>Rate Hike</fullName>
                <isActive>false</isActive>
                <label>Rate Hike</label>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>