force-app/main/default/objects/Market_Event__c/fields/Trigger_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Threshold__c</fullName>
    <label>Trigger_Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>