force-app/main/default/objects/Market_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Share_Name__c</columns>
    <columns>Event_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>